<?xml version="1.0"?>
<package format="2">
  <name>canet</name>
  <version>1.12.0</version>
  <description>The canet package</description>
  <maintainer email="hit623zcx@163.com">control</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>common_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>rosunit</depend>
  <depend>std_msgs</depend>
  <depend>roslint</depend>

</package>
