<?xml version="1.0"?>
<package format="2">
  <name>libtrajectory_follower</name>
  <version>1.12.0</version>
  <description>The libtrajectory_follower package</description>
  <maintainer email="control@163.com.cn">control</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rostest</test_depend>

  <depend>common_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rosunit</depend>
  <depend>std_msgs</depend>
  <depend>eigen</depend>
</package>
