<?xml version="1.0"?>
<package format="2">
  <name>llh2utm</name>
  <version>1.12.0</version>
  <description>The llh2utm package</description>
  <maintainer email="common@163.com.cn">common</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geographiclib</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
</package>
