<?xml version="1.0"?>
<package format="2">
  <name>mpc_follower</name>
  <version>1.12.0</version>
  <description>The mpc_follower package</description>
  <maintainer email="horibe.takamasa@gmail.com">Takamasa Horibe</maintainer>
  <author email="horibe.takamasa@gmail.com">Takamasa Horibe</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>amathutils_lib</depend>
  <depend>libtrajectory_follower</depend>
  <depend>common_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>rosunit</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
  <depend>roslint</depend>
  <depend>qpoases_vendor</depend>
</package>
