<?xml version="1.0"?>
<package format="2">
  <name>gnss</name>
  <version>1.12.0</version>
  <description>The gnss package</description>
  <maintainer email="hit623zcx@163.com">zhangchunxin</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>serial</depend>
  <depend>rostest</depend>
  <depend>rosunit</depend>
  <depend>std_msgs</depend>
  <depend>common_msgs</depend>
  <depend>roslint</depend>

</package>
