<?xml version="1.0"?>
<package format="2">
  <name>rtk</name>
  <version>1.12.0</version>
  <description>The rtk package</description>
  <maintainer email="hit623zcx@163.com">zhangchunxin</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>common_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
  <depend>llh2utm</depend>


</package>
