<?xml version="1.0"?>
<package format="2">
  <name>lane_select</name>
  <version>1.12.0</version>
  <description>The lane_select package</description>
  <maintainer email="tomo@axe-inc.co.jp">Tomomi HORII</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>common_msgs</depend>

  <depend>libtrajectory_follower</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
