<?xml version="1.0"?>
<package format="2">
  <name>rospython</name>
  <version>1.12.0</version>
  <description>The rospython package</description>

  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
